--- a/2024.html
+++ b/2024.html
@@ -54,35 +54,35 @@ Sešli jsme se ve stáji už ráno, nejdříve proběhl dokonalý úklid, pak or
 Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase. </p>
                     
                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden1"
+                            <img src="./akce_foto/2024_detskyden1.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden3"
+                            <img src="./akce_foto/2024_detskyden3.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden2"
+                            <img src="./akce_foto/2024_detskyden2.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden4"
+                            <img src="./akce_foto/2024_detskyden4.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                         <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden5"
+                            <img src="./akce_foto/2024_detskyden5.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure><figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden6"
+                            <img src="./akce_foto/2024_detskyden6.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure><figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden7"
+                            <img src="./akce_foto/2024_detskyden7.JPG"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
@@ -98,57 +98,57 @@ V hobby parkurech byla ten den tradiční hojná účast, ale překvapilo nás 
 Je na místě poděkovat za všechny holky našemu podpůrnému týmu : děkujeme trenérce Martině za vedení doma v tréninku a podporu na kolbišti, dále děkujeme zejména řidičům z řad rodičů a prarodičů. Pochválit bych chtěla i to, že si rády pomůžeme mezi parkury jako ošetřovatelky. 
 Bez vás – nás by to nešlo!! 😊</p>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin"
+                            <img src="./akce_foto/2024_jicin.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin2"
+                            <img src="./akce_foto/2024_jicin2.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin3"
+                            <img src="./akce_foto/2024_jicin3.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin4"
+                            <img src="./akce_foto/2024_jicin4.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin5"
+                            <img src="./akce_foto/2024_jicin5.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin6"
+                            <img src="./akce_foto/2024_jicin6.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin7"
+                            <img src="./akce_foto/2024_jicin7.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin8"
+                            <img src="./akce_foto/2024_jicin8.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin9"
+                            <img src="./akce_foto/2024_jicin9.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin10"
+                            <img src="./akce_foto/2024_jicin10.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin11"
+                            <img src="./akce_foto/2024_jicin11.jpeg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
@@ -159,32 +159,32 @@ Bez vás – nás by to nešlo!! 😊</p>
 Tak vydařené první závody v sezóně potvrzují připravenost našich koní a poníků a jezdecký růst startujících děvčat! Gratulace přišla i ze strany pořadatele. 😊</p>
                     <p class="article_news__text">Děkujeme JK Sobotka za výborně připravené závody a za hodnotné ceny.</p>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/majda_sobotka2024"
+                            <img src="./akce_foto/majda_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/johana_sobotka2024"
+                            <img src="./akce_foto/johana_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/klara_sobotka2024"
+                            <img src="./akce_foto/klara_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/ted_sobotka2024"
+                            <img src="./akce_foto/ted_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure> 
                     <figure class="img_container__part">
-                            <img src="./akce_foto/tina_sobotka2024"
+                            <img src="./akce_foto/tina_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
                      <figure class="img_container__part">
-                            <img src="./akce_foto/verca_sobotka2024"
+                            <img src="./akce_foto/verca_sobotka2024.jpg"
                                 alt=""
                                 onclick="this.classList.toggle('workingImage'); openImg();">
                         </figure>
