--- a/2024.html
+++ b/2024.html
@@ -51,7 +51,7 @@
                     <p class="article_news__text">V sobotu 8.6.2024 jsme v naší stáji pro veřejnost pořádali Dětský den. 
 Tuhle akci jsme si vyzkoušeli již loni na podzim, kdy nám bohužel vůbec nepřálo počasí a návštěvníků dorazilo málo. Ale letos jsme si vážně spravili chuť. 😊
 Sešli jsme se ve stáji už ráno, nejdříve proběhl dokonalý úklid, pak organizace jednotlivých stanovišť, příprava občerstvení a parkoviště. V jednu hodinu se otevřela brána a my přivítali první rodiny s dětmi. Každý malý návštěvník dostal kartičku a postupně obešel 10 stanovišť, kdy na každém splnil veledůležitý úkol – třeba házel podkovou, prolézal pavučinou z lonží, skákal v pytli, vozil kolečko nebo trefoval míčkem terč. Vyplněnou kartičku odevzdal a mohl si vybrat dárek – na dračku šly hlavně gumoví hadi. Rodiče se zatím občerstvovali jídlem a pitím v našem stánku, děti pak odpočívaly u malování na obličej. Vrcholem bylo ale vodění na koních, kde se za drobný poplatek svezli nejen děti, ale často i dospělí. 
-Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase. </p>
+Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase. Za fotky děkujeme Kátě H. ( kackahartlova@seznam.cz ) </p>
                     
                     <figure class="img_container__part">
                             <img src="./akce_foto/2024_detskyden1.JPG"
