--- a/sluzby.html
+++ b/sluzby.html
@@ -54,7 +54,7 @@
                         <div class="ustajeni__slider slider_ustajeni swiper-wrapper">
                             <div class="slider_ustajeni__item slider_item slider_item--mistovani swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                    <p class="slider_item__text">USTÁJENÍ V BOXE DENNĚ MÍSTOVANÉ, PODESTLANÉ SLÁMOU</p>
+                                    <p class="slider_item__text">USTÁJENÍ V BOXE DENNĚ MÍSTOVÁNO, PODESTÝLKA SLÁMOU</p>
                                 </div>
                             <div class="slider_ustajeni__item slider_item slider_item--krmeni swiper-slide">
                                 <span class="slider_item__wraper"></span>
