--- a/cenik.html
+++ b/cenik.html
@@ -53,7 +53,7 @@
                 <p class="prize_item__text prize_item__prize--line">Individuální trénink nebo vyjížďka</p>
                 <div class="table prize_item__table">
                     
-                        <div class="table__item">tTrénink na jízdárně 500,- /45 min</div>
+                        <div class="table__item">Trénink na jízdárně 500,- /45 min</div>
                         <div class="table__item">Vyjížďka do přírody s doprovodem 800,- / 45 min</div>
                     
                 </div>
