--- a/cenik.html
+++ b/cenik.html
@@ -78,7 +78,7 @@
             </div>
             <div class="prize_item">
                 <h3 class="prize_item__heading">ČLENSTVÍ</h3>
-                <p class="prize_item__text">Členstí v jezdeckém klubu</p>
+                <p class="prize_item__text">Členství v jezdeckém klubu</p>
                 <a class="prize_button" href="./sluzby.html#clenstvi">Dozvědět se více</a>
                 <p class="prize_item__prize prize_item__prize--line">1 000,-/měsíčně</p>
             </div>
