--- a/kone.html
+++ b/kone.html
@@ -44,7 +44,7 @@
         <p class="main__ text main_kone__text">V současné době se u nás ve stáji nachází 21 koní</p>
         <ul class="small_nav">
             <li class="small_nav__item"><a class="button button_kone prize_button" href="#nasi">Naši koně</a></li>
-            <li class="small_nav__item"><a class="button button_kone prize_button" href="#soukromi">soukromí koně</a>
+            <li class="small_nav__item"><a class="button button_kone prize_button" href="#soukromi">Soukromí koně</a>
             </li>
         </ul>
         <section class="section section_kone section_kone--nasi">
