--- a/kone.html
+++ b/kone.html
@@ -389,7 +389,7 @@
         </section>
         <ul class="small_nav">
             <li class="small_nav__item"><a class="button button_kone prize_button" href="#nasi">Naši koně</a></li>
-            <li class="small_nav__item"><a class="button button_kone prize_button" href="#soukromi">soukromí koně</a>
+            <li class="small_nav__item"><a class="button button_kone prize_button" href="#soukromi">Soukromí koně</a>
             </li>
         </ul>
 
