--- a/cenik.html
+++ b/cenik.html
@@ -72,7 +72,7 @@
                 <p class="prize_item__text">Pronajmutí samotného přepravníku pro dva koně</p>
                 <p class="prize_item__prize prize_item__prize--line">600,-/den</p>
                 <div class="table">
-                    <div class="table__item">Řidič</div>
+                    <div class="table__item">Řidič a tažné vozidlo</div>
                     <div class="table__item table__item--right">15,-/km</div>
                 </div>
             </div>
