--- a/sluzby.html
+++ b/sluzby.html
@@ -54,23 +54,23 @@
                         <div class="ustajeni__slider slider_ustajeni swiper-wrapper">
                             <div class="slider_ustajeni__item slider_item slider_item--mistovani swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                    <p class="slider_item__text">USTÁJENÍ V BOXE DENNĚ MÍSTOVÁNO, PODESTÝLKA SLÁMOU</p>
+                                    <p class="slider_item__text">USTÁJENÍ V BOXE - DENNĚ MÍSTOVÁNO, PODESTÝLKA SLÁMOU</p>
                                 </div>
                             <div class="slider_ustajeni__item slider_item slider_item--krmeni swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                <p class="slider_item__text">DVAKRÁT DENNĚ KRMENÍ - NAŠE MÜSLI, OVES A DOPLŇKY
+                                <p class="slider_item__text">DVAKRÁT DENNĚ KRMENÍ - NAŠE MÜSLI, OVES A DALŠÍ DOPLŇKY
                                     KRMENÍ(NADSTAVBY A VYJÍMKY JSOU NA DOMLUVĚ)</p>
                             </div>
                             <div class="slider_ustajeni__item slider_item slider_item--vybeh swiper-slide">
                                 <span class="slider_item__wraper"></span>
-                                    <p class="slider_item__text">DENNÍ POBYT KONĚ VE VÝBĚHU</p>
+                                    <p class="slider_item__text">DENNÍ POBYT KONÍ NA TRAVNATÉ PASTVINĚ, V ZIMĚ SENO</p>
                                </div>
                             <div class="slider_ustajeni__item slider_item slider_item--jizdarna swiper-slide">
                                 <span class="slider_item__wraper"></span>
                                     <p class="slider_item__text">MOŽNOST <span class="slider_item__text--red">ZDARMA</span>
                                         VYUŽITÍ PÍSKOVÉ JÍZDÁRNY VČETNĚ MATERIÁLU
                                         PRO
-                                        VÝCVIK KONÍ</p>
+                                        TRÉNINK</p>
                                 </div>
                             <div class="slider_ustajeni__item slider_item slider_item--sedlovna swiper-slide">
                                 <span class="slider_item__wraper"></span>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
-                    <p class="ustajeni__text_other">Cena nezahrnuje veterinární a podkovářské práce</p>
+                    <p class="ustajeni__text_other">Cena nezahrnuje veterinární a podkovářské práce.</p>
                     <p class="ustajeni__text ustajeni__text--bold">Více informací na dotazu správce jízdárny.</p>
                 </div>
             </section>
@@ -88,13 +88,13 @@
                 <h3 class="section__heading section__heading--absolute">Členství</h3>
                 <p class="section__text section__text--border">Opravdové nadšence a milovníky koní rádi uvítáme mezi námi jako členy v našem jezdeckém klubu.</p>
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
-                            src="./imgs/1718266779779a.JPG" alt="Fotografie členů klubu stáje JS Vydlákov na zasněžené jízdárně"></a>
+                            src="./imgs/1718266779779a.JPG" alt="Fotografie členů klubu stáje JS Vydlákov na pískové jízdárně"></a>
                     <figcaption></figcaption>
                 </figure>
             </section>
             <section class="section section_pronajem">
                 <h3 class="section__heading section__heading--absolute">Pronájem koní</h3>
-                <p class="section__text section__text--border">Nabízíme pronájem koní k vyjížďkám, na svatby, pro dětské oslavy apod., případné zakoupení permanentky, která zahrnuje 10 jízd - tréninků či vyjížděk u nás ve stáji.
+                <p class="section__text section__text--border">Nabízíme pronájem koní k vyjížďkám, na svatby, pro dětské oslavy apod. - po dohodě se správcem jízdárny.
                 </p>
                 <figure class="section__img frame"><a class="img_wrapper"><img class="frame__item"
                             src="./imgs/pronajem_koni_B.jpg" alt="Manželská fotografie na louce, manželka oblečená v bílých šatech jede na koni z naši stáje JS Vydlákov"></a>
