--- a/tabor.html
+++ b/tabor.html
@@ -50,12 +50,12 @@
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Tábory jsou organizovány po týdenních turnusech (pondělí až pátek),</li>
                 <li class="list_tabor__item">každý den začíná v 8:00 a končí v 16:00 v areálu naší stáje
-                    Adresa: Pod Strání 131, Stráž nad Nisou<,/li>
+                    Adresa: Pod Strání 131, Stráž nad Nisou<,
                 <li class="list_tabor__item">během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
                     8 míst),</li>
-                <li class="list_tabor__item">po celou dobu budeme k zastižení</li>
+                <li class="list_tabor__item">po celou dobu budeme k zastižení zde:</li>
             </ul>
 
             <a class="prize_button prize_button--center" href="kontakt.html">kontaktujte nás</a>
