--- a/tabor.html
+++ b/tabor.html
@@ -91,7 +91,7 @@
             </ul>
         </section>
         <section class="section section_tabor section--line">
-            <h3 class="section__heading section__heading--red">Turnusy:</h3>
+            <h3 class="section__heading section__heading--red">Turnusy 2024:</h3>
             <ol class="section__list list_tabor order_list" start="">
                 <li class="order_list__item list_tabor__item">1.7 - 5.7.</li>
                 <li class="order_list__item list_tabor__item">8.7 - 12.7.</li>
