--- a/tabor.html
+++ b/tabor.html
@@ -110,7 +110,7 @@
         </section>
         <section class="section section_tabor">
             <h3 class="section__heading section__heading--red">Přihláška na tábor:</h3>
-            <a class="prize_button prize_button--center" href="./prihlaska_na_tabor.doc" download>stáhnout prihlášku na tábor</a>
+            <a class="prize_button prize_button--center" href="./prihlaska_na_tabor.doc" download>stáhnout přihlášku na tábor</a>
         </section>
 
     </main>
