--- a/tabor.html
+++ b/tabor.html
@@ -104,7 +104,7 @@
             <h3 class="section__heading section__heading--red">Způsoby přihlášení dítěte:</h3>
             <ul class="section__list list_tabor">
                 <li class="list_tabor__item">Osobním odevzdáním vyplněné přihlášky ve stáji + platba</li>
-                <li class="list_tabor__item">zaláním el. poštou na e-mail a zaplacením platby převodem na účet</li>
+                <li class="list_tabor__item">zasláním el. poštou na e-mail a zaplacením platby převodem na účet</li>
             </ul>
             <a class="prize_button prize_button--center" href="mailto:langos88@seznam.cz">zaslat e-mail</a>
         </section>
