--- a/tabor.html
+++ b/tabor.html
@@ -41,7 +41,8 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
-            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní. Fotky z minulých ročníků najdete zde: https://jkvydlakov.rajce.idnes.cz/</p>
+            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.  
+                Fotky z minulých ročníků najdete zde: https://jkvydlakov.rajce.idnes.cz/</p>
             <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
                 naučit starat</p>
         </section>
