--- a/2024.html
+++ b/2024.html
@@ -53,40 +53,42 @@ Tuhle akci jsme si vyzkoušeli již loni na podzim, kdy nám bohužel vůbec nep
 Sešli jsme se ve stáji už ráno, nejdříve proběhl dokonalý úklid, pak organizace jednotlivých stanovišť, příprava občerstvení a parkoviště. V jednu hodinu se otevřela brána a my přivítali první rodiny s dětmi. Každý malý návštěvník dostal kartičku a postupně obešel 10 stanovišť, kdy na každém splnil veledůležitý úkol – třeba házel podkovou, prolézal pavučinou z lonží, skákal v pytli, vozil kolečko nebo trefoval míčkem terč. Vyplněnou kartičku odevzdal a mohl si vybrat dárek – na dračku šly hlavně gumoví hadi. Rodiče se zatím občerstvovali jídlem a pitím v našem stánku, děti pak odpočívaly u malování na obličej. Vrcholem bylo ale vodění na koních, kde se za drobný poplatek svezli nejen děti, ale často i dospělí. 
 Děkujeme všem návštěvníkům za účast a doufáme, že se třeba letos na podzim potkáme zase. Za fotky děkujeme Kátě H. ( kackahartlova@seznam.cz ) </p>
                     
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden1.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden3.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden2.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden4.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
+                    <div class="img_container article_news__imgs">
                         <figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden5.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure><figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden6.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure><figure class="img_container__part">
-                            <img src="./akce_foto/2024_detskyden7.JPG"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                    <img src="./imgs/letak/Detsky den.png" alt="Letáček, který popusuje dětský den u koní, který se koná 8.6.2024">
+                                <img src="./akce_foto/2024_detskyden1.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden3.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden2.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden4.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                            <figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden5.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure><figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden6.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure><figure class="img_container__part">
+                                <img src="./akce_foto/2024_detskyden7.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                    </div>
+                    
                 </article>
                  <article id="detskyden2024" class="section_year__article article_news">
                     <h4 class="article_news__heading">Hobby závody v JC Jičín</h4>
@@ -97,97 +99,101 @@ Další byl parkur na 80cm na limitovaný čas, kde startovala Majda s Devronem
 V hobby parkurech byla ten den tradiční hojná účast, ale překvapilo nás málo startujících koní v oficiálních soutěžích. Přitom Jezdecké centrum Jičín je velmi příjemné závodiště, profesionálně organizované, s perfektním povrchem na kolbišti i opracovišti. Potěšily nás i moc hezké a hodnotné ceny umístěným startujícím a kokardy do 8. místa. 
 Je na místě poděkovat za všechny holky našemu podpůrnému týmu : děkujeme trenérce Martině za vedení doma v tréninku a podporu na kolbišti, dále děkujeme zejména řidičům z řad rodičů a prarodičů. Pochválit bych chtěla i to, že si rády pomůžeme mezi parkury jako ošetřovatelky. 
 Bez vás – nás by to nešlo!! 😊</p>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin2.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin3.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin4.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin5.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin6.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin7.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin8.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin9.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin10.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/2024_jicin11.jpeg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
+                     <div class="img_container article_news__imgs">
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin2.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin3.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin4.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin5.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin6.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin7.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin8.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin9.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin10.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/2024_jicin11.jpeg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                     </div>
                 </article>
                 <article id="detskyden2024" class="section_year__article article_news">
                     <h4 class="article_news__heading">Hobby závody v JK Sobotka</h4>
                     <p class="article_news__text">V sobotu 4.5.2024 jsme se zúčastnili hobby parkurových závodů, které pořádal JK Sobotka. Do Sobotky zavítáme vždy rádi, oceňujeme místní přívětivou atmosféru a skvělou organizaci. V parkuru do 60cm startovala Majda s Lordem a kurzem projeli bezchybně. Hned po ní startovala Johanka s Rockym a i oni předvedli čistý parkur s rychlým rozeskakováním, jež jim přineslo 5. místo.  V následujícím parkuru do 70cm startovala Majda s Devronem, Johanka se Saulem, Tína se Sávou a Lucka s Tedem. Všechny parkury byly bez jediného trestného bodu a čas rozeskakování přinesl Majdě a Devronovi 3. místo, Tině a Sávě 2. místo. Třetí soutěž byla s překážkami do 80 cm, té se zúčastnila Tina se Sávou, Lucka s Tedem, Klárka se Saulem a Verča s Devronem. Klárka a Verča nasbíraly bohužel po jedné smůlovaté chybě 4 trestné body, Lucka opět předvedla čistý parkur a i Tina čistý parkur zopakovala a rozeskakování ji tentokrát vyneslo 1. místo.
 Tak vydařené první závody v sezóně potvrzují připravenost našich koní a poníků a jezdecký růst startujících děvčat! Gratulace přišla i ze strany pořadatele. 😊</p>
                     <p class="article_news__text">Děkujeme JK Sobotka za výborně připravené závody a za hodnotné ceny.</p>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/majda_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/johana_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/klara_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/ted_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure> 
-                    <figure class="img_container__part">
-                            <img src="./akce_foto/tina_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
-                     <figure class="img_container__part">
-                            <img src="./akce_foto/verca_sobotka2024.jpg"
-                                alt=""
-                                onclick="this.classList.toggle('workingImage'); openImg();">
-                        </figure>
+                     <div class="img_container article_news__imgs">
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/majda_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/johana_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/klara_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/ted_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure> 
+                        <figure class="img_container__part">
+                                <img src="./akce_foto/tina_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                         <figure class="img_container__part">
+                                <img src="./akce_foto/verca_sobotka2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                     </div>
                 </article>
             </section>
     </main>
