--- a/tabor.html
+++ b/tabor.html
@@ -113,7 +113,34 @@
             <h3 class="section__heading section__heading--red">Přihláška na tábor:</h3>
             <a class="prize_button prize_button--center" href="./prihlaska_na_tabor.doc" download>stáhnout přihlášku na tábor</a>
         </section>
-
+        <div class="img_container article_news__imgs">
+            <figure class="img_container__part">
+                <img src="./imgs/taborhistorie1.jpg"
+                    alt=""
+                    onclick="this.classList.toggle('workingImage'); openImg();">
+            </figure>
+            <figure class="img_container__part">
+                <img src="./imgs/taborhistorie2.jpg"
+                    alt=""
+                    onclick="this.classList.toggle('workingImage'); openImg();">
+            </figure>
+    
+            <figure class="img_container__part">
+                <img src="./imgs/taborhistorie3.jpg"
+                    alt=""
+                    onclick="this.classList.toggle('workingImage'); openImg();">
+            </figure>
+            <figure class="img_container__part">
+                <img src="./imgs/taborhistorie4.jpg"
+                    alt=""
+                    onclick="this.classList.toggle('workingImage'); openImg();">
+            </figure>
+            <figure class="img_container__part">
+                <img src="./imgs/taborhistorie5.jpg"
+                    alt=""
+                    onclick="this.classList.toggle('workingImage'); openImg();">
+            </figure>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer__heading">Jezdecká společnost Vydlákov</p>
